syntax = "proto3";

option go_package = "/";

import "proto/device.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package order;

service Orders {
  rpc CreateOrder(CreateOrderReq) returns(CreateOrderRes);
  rpc CheckOrder(CheckOrderReq) returns(CheckOrderRes);
  rpc UpdateOrder(UpdateOrderReq) returns(google.protobuf.Empty);
}

message CreateOrderReq {
  string UserUUID = 1;
  repeated string DevicesUUIDs = 2;
}

message CreateOrderRes {
  string OrderUUID = 1;
}

message CheckOrderReq {
  string OrderUUID = 1;
}

message CheckOrderRes {
  string Status = 1;
  float Price = 2;
  google.protobuf.Timestamp CreatedAt = 3;
}

message UpdateOrderReq {
  string Status = 1;
  string OrderUUID = 2;
}